google maps api, webview browser
javascript bridge and XMLHttpRequest interceptor

set some map elements invisible

JsBridge differentiated

Region factored out, coordinate extraction from urls

Region factored out, coordinate extraction from urls

remaining scrapers

icon detection

map turn around

responseparser Pt1

responseparser, directories per running instance

Loader, command line parameters for coordinates